# qdMovieAPI

./: DISCLAIMER.txt  Dockerfile  LICENSE.txt  README.md  api.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  sample_person.json  sample_response.json  sample_search.json
imdb_service/: models.py  parsers.py
qd_imdb_service/: models.py  parsers.py  services.py
