[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "qd_imdb_service"
version = "0.1.0"
description = "A Python service for querying IMDb data"
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [
    { name = "@tveronesi", email = "you@example.com" }
]
dependencies = [
  "flask",
    "requests",
    "lxml",
    "pydantic"
]

[tool.setuptools]
packages = ["qd_imdb_service"]
