[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "imdb_service"
version = "0.1.0"
description = "A short description"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Your Name", email = "you@example.com" }
]
dependencies = [
  "flask",
        "requests",
        "lxml",
        "pydantic"
]

[tool.setuptools]
packages = ["imdb_service"]
